--- a/.github/workflows/gadpp.yml
+++ b/.github/workflows/gadpp.yml
@@ -1,4 +1,3 @@
-name: Update GitHub Profile Page
 on: [push]
 
 jobs:
@@ -9,7 +8,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: GADPP
-        uses: umutphp/github-action-dynamic-profile-page@v2
+        uses: ./
         id: gadpp
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
