--- a/.github/workflows/gadpp.yml
+++ b/.github/workflows/gadpp.yml
@@ -1,14 +1,14 @@
 on: [push]
 
 jobs:
-  gadpp_job:
+  hello_world_job:
     runs-on: ubuntu-latest
     name: Update GitHub Profile Page
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: GADPP
-        uses: ./
+        uses: umutphp/github-action-dynamic-profile-page@v1
         id: gadpp
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
